--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
 
+    <meta property="og:title" content="Boone Development" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://achaney.me" />
+    <meta property="og:image" content="https://achaney.me/images/BooneDevLogo-blue.png" />
+
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
 
@@ -39,7 +44,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <div class="site-title">Andrew <span>Chaney</span></div>
+            <div class="site-title">Boone <span>Development</span></div>
           </div>
 
           <!-- Navigation -->
@@ -101,26 +106,23 @@
                         <h1>Andrew Chaney</h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
-                            <div class="sp-subtitle">Frontend Developer</div>
-                          </div>
-                          <div class="item">
-                            <div class="sp-subtitle">Backend Developer</div>
-                          </div>
-                          <div class="item">
                             <div class="sp-subtitle">Blockchain Developer</div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle">Computer Wizard</div>
+                            <div class="sp-subtitle">Full-Stack Developer</div>
                           </div>
                           <div class="item">
                             <div class="sp-subtitle">Systems Administrator</div>
+                          </div>
+                          <div class="item">
+                            <div class="sp-subtitle">Entrepreneur</div>
                           </div>
                         </div>
                       </div>
 
                       <div class="social-links">
                         <a href="https://github.com/netuoso" target="_blank" rel="noopener"><i class="fa fa-github"></i></a>
-                        <a href="mailto:andrewc@pobox.com"><i class="fa fa-envelope"></i></a>
+                        <a href="mailto:andrew@boonedevelopment.com"><i class="fa fa-envelope"></i></a>
                       </div>
                     </div>
                   </div>
@@ -129,23 +131,29 @@
                 <div class="page-content">
                   <div class="row">
 
-                    <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-sm-8">
                       <div class="about-me">
                         <div class="block-title">
                           <h3>About <span>Me</span></h3>
                         </div>
-                        <p>Hello! I’m Andrew Chaney; a passionate web developer with a focus on cloud hosted infrastructure and automation. My portfolio consists of a wide range of experience from single page websites to full-scale applications. I am highly motivated and always up-to-date with the latest, emerging technologies. Get in touch with me for a customized solution for your business needs.</p>
+                        <p>
+                          Ever since I first came across cryptocurrency I knew instantly it was something I wanted to pursue further. After spending time learning the jargon and firing up a miner, I eventually decided to switch gears towards blockchain development. Fast forward to now, almost a decade later, and I am the CEO & Founder of this amazing blockchain company that even has its own flagship blockchain product.
+                        </p>
+                        <p>
+                          If you are looking to work with Boone Development on your own blockchain implementation, or any other form of custom development, do not hesitate to reach out today. I pride myself on delivering high quality products with a blazing fast speed and efficiency. What are you waiting for; get in touch now!
+                        </p>
                       </div>
                       <div class="download-resume">
                         <a href="https://mega.nz/#!ZsESVKJQ!qiCrtZR7tvf513V-PosjfBluVagHZN22g0u61T1WIXg" class="btn btn-secondary" target="_blank" rel="noopener">Download Resume</a>
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-sm-4">
                       <ul class="info-list">
-                        <li><span class="title">Email</span><span class="value"><a href="mailto:andrewc@pobox.com">andrewc@pobox.com</a></span></li>
-                        <li><span class="title">Address</span><span class="value">Louisiana, USA</span></li>
-                        <li><span class="title">Freelance</span><span class="value available">Available</span></li>
+                        <li><span class="title">Email</span><span class="value">
+                        <a href="mailto:andrew@boonedevelopment.com">andrew@boonedevelopment.com</a></span></li>
+                        <li><span class="title">Freelance</span><br/>
+                        <span class="value available">Available</span></li>
                       </ul>
                     </div>
 
@@ -173,28 +181,28 @@
                         <div class="timeline">
                           <!-- Experience 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Blockchain Developer</h4>
-                            <span class="item-period">2018 - Current</span>
-                            <span class="item-small">PredictEV Inc.</span>
-                            <p class="item-description">Predictev is a patent-pending blockchain-powered social sports prediction platform. Predictev rewards fans for making live in-game predictions via chat as well as posting in-depth pre-game analysis.</p>
+                            <h4 class="item-title">CEO & Founder</h4>
+                            <span class="item-period">2019 - Current</span>
+                            <span class="item-small">Boone Development</span>
+                            <p class="item-description">Boone Development is a boutique development firm that specializes in cutting edge blockchain technology. As CEO of a Boone Development, I am required to wear many hats in a wide range of roles.</p>
                           </div>
                           <!-- / Experience 1 -->
 
                           <!-- Experience 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Full-stack Developer / Devops</h4>
-                            <span class="item-period">2017 - Current</span>
-                            <span class="item-small">Freelance</span>
-                            <p class="item-description">Freelance gives me the freedom to be able to choose between a wide range of projects and clients. Motivation and drive are keys to success in this stage.</p>
+                            <h4 class="item-title">Blockchain Developer</h4>
+                            <span class="item-period">2018 - 2019</span>
+                            <span class="item-small">PredictEV Inc.</span>
+                            <p class="item-description">Predictev is a patent-pending blockchain-powered social sports prediction platform. Predictev rewards fans for making live in-game predictions via chat as well as posting in-depth pre-game analysis.</p>
                           </div>
                           <!-- / Experience 2 -->
 
                           <!-- Experience 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Senior Software Developer</h4>
-                            <span class="item-period">2015 - 2017</span>
-                            <span class="item-small">Autobrain, LLC</span>
-                            <p class="item-description">Autobrain is a family focused GPS tracker for cars that installs into the OBD-II port and broadcasts vital car diagnostics to the cloud. By focusing on teenage and senior safety, Autobrain hopes to make driving safer for all.</p>
+                            <h4 class="item-title">Full-stack Developer / Devops</h4>
+                            <span class="item-period">2017 - Current</span>
+                            <span class="item-small">Freelance</span>
+                            <p class="item-description">Freelance gives me the freedom to be able to choose between a wide range of projects and clients. Motivation and drive are keys to success in this stage.</p>
                           </div>
                           <!-- / Experience 3 -->
                         </div>
@@ -209,21 +217,30 @@
                         <div class="timeline">
                           <!-- Experience 4 -->
                           <div class="timeline-item">
+                            <h4 class="item-title">Senior Software Developer</h4>
+                            <span class="item-period">2015 - 2017</span>
+                            <span class="item-small">Autobrain, LLC</span>
+                            <p class="item-description">Autobrain is a family focused GPS tracker for cars that installs into the OBD-II port and broadcasts vital car diagnostics to the cloud. By focusing on teenage and senior safety, Autobrain hopes to make driving safer for all.</p>
+                          </div>
+                          <!-- / Experience 4 -->
+
+                          <!-- Experience 5 -->
+                          <div class="timeline-item">
                             <h4 class="item-title">Network Support Analyst</h4>
                             <span class="item-period">2010 - 2015</span>
                             <span class="item-small">Techflavor, LLC</span>
                             <p class="item-description">Techflavor is a Managed Service Provider that was responsible for managing the networks and technology infrastructure of many clients with various sized teams and operations.</p>
                           </div>
-                          <!-- / Experience 4-->
+                          <!-- / Experience 5-->
 
-                          <!-- Experience 5 -->
+                          <!-- Experience 6 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Offshore Surveyor</h4>
                             <span class="item-period">2006 - 2015</span>
-                            <span class="item-small">Tesla Offshore</span>
+                            <span class="item-small">Tesla Offshore, LLC</span>
                             <p class="item-description">Tesla Offshore is an Oil and Gas focused survey firm based out of Prairieville, Louisiana. The company performed work in the Gulf of Mexico in drilling, site-clearance, and geological surveys.</p>
                           </div>
-                          <!-- / Experience 5 -->
+                          <!-- / Experience 6 -->
 
                         </div>
                       </div>
@@ -369,6 +386,18 @@
                     <div class="col-sm-6 col-md-3">
                       <div class="service-block"> 
                         <div class="service-info">
+                          <div class="service-image">
+                            <img src="images/service/blockchain.png" alt="Blockchain Development" class="mCS_img_loaded">
+                          </div>
+                          <h4>Blockchain Development</h4>
+                          <p>Boone Development specializes in blockchain development based on the Graphene library. Our flagship blockchain product is the Morphene Blockchain.</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-sm-6 col-md-3">
+                      <div class="service-block"> 
+                        <div class="service-info">
                           <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                           <div class="service-image">
                             <img src="images/service/web_design_icon.png" alt="Web Development" class="mCS_img_loaded">
@@ -402,18 +431,6 @@
                         </div>
                       </div>
                     </div>
-
-                    <div class="col-sm-6 col-md-3">
-                      <div class="service-block"> 
-                        <div class="service-info">
-                          <div class="service-image">
-                            <img src="images/service/advetising_icon.png" alt="Advertising" class="mCS_img_loaded">
-                          </div>
-                          <h4>Advertising</h4>
-                          <p>If you are looking to increase awareness and exposure for your brand, I can help you setup and configure cost-effective advertising campaigns that drive traffic to your website or location.</p>
-                        </div>
-                      </div>
-                    </div>
                   </div>
                   <!-- End of My Services -->
 
@@ -442,18 +459,10 @@
 
                         <div class="contact-info-block">
                           <div class="ci-icon">
-                            <i class="fa fa-map-marker"></i>
-                          </div>
-                          <div class="ci-text">
-                            <h5>Louisiana, USA</h5>
-                          </div>
-                        </div>
-                        <div class="contact-info-block">
-                          <div class="ci-icon">
                             <i class="fa fa-envelope"></i>
                           </div>
                           <div class="ci-text">
-                            <h5><a href="mailto:andrewc@pobox.com">andrewc@pobox.com</a></h5>
+                            <h5><a href="mailto:andrew@boonedevelopment.com">andrew@boonedevelopment.com</a></h5>
                           </div>
                         </div>
                         <div class="contact-info-block">
