--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         </p>
                       </div>
                       <div class="download-resume">
-                        <a href="https://mega.nz/#!ZsESVKJQ!qiCrtZR7tvf513V-PosjfBluVagHZN22g0u61T1WIXg" class="btn btn-secondary" target="_blank" rel="noopener">Download Resume</a>
+                        <a href="https://mega.nz/#!8sEG2aZC!UEdFqtQIXEbdAuBcnaCztMcLwkNhiuuBgOc2QWMULBI" class="btn btn-secondary" target="_blank" rel="noopener">Download Resume</a>
                       </div>
                     </div>
 
@@ -355,7 +355,7 @@
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
                         <div class="center download-resume">
-                          <a href="https://mega.nz/#!ZsESVKJQ!qiCrtZR7tvf513V-PosjfBluVagHZN22g0u61T1WIXg" class="btn btn-secondary" target="_blank" rel="noopener">Download Resume</a>
+                          <a href="https://mega.nz/#!8sEG2aZC!UEdFqtQIXEbdAuBcnaCztMcLwkNhiuuBgOc2QWMULBI" class="btn btn-secondary" target="_blank" rel="noopener">Download Resume</a>
                         </div>
                       </div>
                     </div>
