update website;change line endings

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
                         <h1>Andrew Chaney</h1>
-                        <div class="owl-carousel text-rotation">                                    
+                        <div class="owl-carousel text-rotation">
                           <div class="item">
                             <div class="sp-subtitle">Blockchain Developer</div>
                           </div>
@@ -131,29 +131,32 @@
                 <div class="page-content">
                   <div class="row">
 
-                    <div class="col-sm-8">
+                    <div class="col-sm-12 col-md-8">
                       <div class="about-me">
                         <div class="block-title">
                           <h3>About <span>Me</span></h3>
                         </div>
                         <p>
-                          Ever since I first came across cryptocurrency I knew instantly it was something I wanted to pursue further. After spending time learning the jargon and firing up a miner, I eventually decided to switch gears towards blockchain development. Fast forward to now, almost a decade later, and I am the CEO & Founder of this amazing blockchain company that even has its own flagship blockchain product.
+                          I am a self taught software developer that started practicing professionally in 2010 where I started creating custom software for Techflavor. Since then, I have done information security and threat management, embedded device development (hardware and software), database driven website development (MVC frameworks), mobile application development (Android/iOS), and blockchain development.
                         </p>
                         <p>
-                          If you are looking to work with Boone Development on your own blockchain implementation, or any other form of custom development, do not hesitate to reach out today. I pride myself on delivering high quality products with a blazing fast speed and efficiency. What are you waiting for; get in touch now!
+                          When I found cryptocurrency in 2010 I quickly realized it was the path I wished to pursue with my software development career. Since then I have come to master several different blockchain technologies and have found creative ways to apply them to businesses of all sizes. I have supported companies that wanted to simply start accepting cryptocurrency through a point-of-sale system to companies that wanted to build their company on top of the blockchain.
+                        </p>
+                        <p>
+                          If you are looking to work with <strong>Boone Development</strong> on your own blockchain implementation, or any other form of custom development, do not hesitate to reach out today. I pride myself on delivering high quality products with a blazing fast speed and efficiency that can fully satisfy your companies particular needs before the competition.
                         </p>
                       </div>
-                      <div class="download-resume">
+                      <!-- <div class="download-resume">
                         <a href="https://mega.nz/#!8sEG2aZC!UEdFqtQIXEbdAuBcnaCztMcLwkNhiuuBgOc2QWMULBI" class="btn btn-secondary" target="_blank" rel="noopener">Download Resume</a>
-                      </div>
+                      </div> -->
                     </div>
 
-                    <div class="col-sm-4">
+                    <div class="col-sm-12 col-md-4">
                       <ul class="info-list">
-                        <li><span class="title">Email</span><span class="value">
-                        <a href="mailto:andrew@boonedevelopment.com">andrew@boonedevelopment.com</a></span></li>
                         <li><span class="title">Freelance</span><br/>
                         <span class="value available">Available</span></li>
+                        <li><span class="title">Email</span><span class="value">
+                        <a href="mailto:andrew@boonedevelopment.com">andrew@boonedevelopment.com</a></span></li>
                       </ul>
                     </div>
 
@@ -169,13 +172,13 @@
                 <div class="page-header color-1">
                   <h2>Resume</h2>
                 </div>
-                <div class="page-content">
+                <div class="page-content" style="text-align:center;">
 
                   <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Experience</h3>
+                          <h3><span>Experience<span></h3>
                         </div>
 
                         <div class="timeline">
@@ -184,17 +187,21 @@
                             <h4 class="item-title">CEO & Founder</h4>
                             <span class="item-period">2019 - Current</span>
                             <span class="item-small">Boone Development</span>
-                            <p class="item-description">Boone Development is a boutique development firm that specializes in cutting edge blockchain technology. As CEO of a Boone Development, I am required to wear many hats in a wide range of roles.</p>
+                            <br/>
+                            <p class="item-description">
+                              <strong>Boone Development</strong> is a boutique development firm that specializes in cutting edge blockchain technology. Some of the blockchain platforms that <strong>Boone Development</strong> currently supports are Bitcoin, EOS, Hive, Steem, and Ethereum.<br/><br/>
+                              On top of software development services, <strong>Boone Development</strong> also provides high quality blockchain consulting for all types of businesses and clients.
+                            </p>
                           </div>
                           <!-- / Experience 1 -->
 
                           <!-- Experience 2 -->
-                          <div class="timeline-item">
+                          <!-- <div class="timeline-item">
                             <h4 class="item-title">Blockchain Developer</h4>
                             <span class="item-period">2018 - 2019</span>
                             <span class="item-small">PredictEV Inc.</span>
                             <p class="item-description">Predictev is a patent-pending blockchain-powered social sports prediction platform. Predictev rewards fans for making live in-game predictions via chat as well as posting in-depth pre-game analysis.</p>
-                          </div>
+                          </div> -->
                           <!-- / Experience 2 -->
 
                           <!-- Experience 3 -->
@@ -202,7 +209,11 @@
                             <h4 class="item-title">Full-stack Developer / Devops</h4>
                             <span class="item-period">2017 - Current</span>
                             <span class="item-small">Freelance</span>
-                            <p class="item-description">Freelance gives me the freedom to be able to choose between a wide range of projects and clients. Motivation and drive are keys to success in this stage.</p>
+                            <br/>
+                            <p class="item-description">
+                              As a full stack developer, I provide development services for frontend or backend related purposes. We provide custom development, help, and support for projects of all sizes and complexity.<br/><br/>
+                              Backend services include custom APIs that can serve data to websites, mobile applications, blockchains, smart contracts, web oracles, and much more. Frontend services include website development with static websites, custom themes/templates, and user experience consulting/development.<br/>
+                            </p>
                           </div>
                           <!-- / Experience 3 -->
                         </div>
@@ -220,7 +231,9 @@
                             <h4 class="item-title">Senior Software Developer</h4>
                             <span class="item-period">2015 - 2017</span>
                             <span class="item-small">Autobrain, LLC</span>
-                            <p class="item-description">Autobrain is a family focused GPS tracker for cars that installs into the OBD-II port and broadcasts vital car diagnostics to the cloud. By focusing on teenage and senior safety, Autobrain hopes to make driving safer for all.</p>
+                            <p class="item-description">
+                              Autobrain directly monitors and communicates vital vehicle information through a wireless, easy to install, plug and play OBD-II device, website, and mobile app. With Autobrain, you can locate your car instantly with your phone, get an alert when your teenager is driving too fast, and get help quickly if you're in a crash; much like OnStar.
+                            </p>
                           </div>
                           <!-- / Experience 4 -->
 
@@ -229,7 +242,9 @@
                             <h4 class="item-title">Network Support Analyst</h4>
                             <span class="item-period">2010 - 2015</span>
                             <span class="item-small">Techflavor, LLC</span>
-                            <p class="item-description">Techflavor is a Managed Service Provider that was responsible for managing the networks and technology infrastructure of many clients with various sized teams and operations.</p>
+                            <p class="item-description">
+                              Techflavor is a Managed Service Provider that is responsible for managing the networks and technological infrastructure of many clients with various sized teams and operations. On top of providing high quality MSP IT services, Techflavor provides state of the art information and cyber security consulting.
+                            </p>
                           </div>
                           <!-- / Experience 5-->
 
@@ -238,7 +253,9 @@
                             <h4 class="item-title">Offshore Surveyor</h4>
                             <span class="item-period">2006 - 2015</span>
                             <span class="item-small">Tesla Offshore, LLC</span>
-                            <p class="item-description">Tesla Offshore is an Oil and Gas focused survey firm based out of Prairieville, Louisiana. The company performed work in the Gulf of Mexico in drilling, site-clearance, and geological surveys.</p>
+                            <p class="item-description">
+                              With offices in Baton Rouge, Louisiana and Houston, Texas, Tesla Offshore operates multiple survey vessels acquiring state of the art high resolution geophysical data of the seafloor and sub-seafloor.
+                            </p>
                           </div>
                           <!-- / Experience 6 -->
 
@@ -305,17 +322,22 @@
                         </div>
 
                         <div class="skills-info">
-                          <h4>Python</h4>                               
+                          <h4>C++</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-9"></div>
                           </div>
 
-                          <h4>Ruby</h4>
+                          <h4>Python</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-10"></div>
                           </div>
 
-                          <h4>C++</h4>
+                          <h4>NodeJS</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-13"></div>
+                          </div>
+
+                          <h4>Ruby</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-11"></div>
                           </div>
@@ -323,12 +345,7 @@
                           <h4>React</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-12"></div>
-                          </div> 
-
-                          <h4>Jquery</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-13"></div>
-                          </div> 
+                          </div>
 
                           <h4>Amazon AWS</h4>
                           <div class="skill-container">
@@ -345,13 +362,13 @@
                             <div class="skill-percentage skill-16"></div>
                           </div>
                         </div>
-                        
+
                       </div>
                     </div>
                   </div>
 
                   <!-- Download Resume Button -->
-                  <div class="row">
+                  <!-- <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
                         <div class="center download-resume">
@@ -359,7 +376,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <!-- End of Download Resume Button -->
 
                 </div>
@@ -379,23 +396,23 @@
                   <div class="row">
                     <div class="col-sm-12 col-md-12">
                       <div class="block-title">
-                        <h3>My <span>Services</span></h3>
+                        <h3><span>Services</span></h3>
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-md-4">
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
                             <img src="images/service/blockchain.png" alt="Blockchain Development" class="mCS_img_loaded">
                           </div>
                           <h4>Blockchain Development</h4>
-                          <p>Boone Development specializes in blockchain development based on the Graphene library. Our flagship blockchain product is the Morphene Blockchain.</p>
+                          <p><strong>Boone Development</strong> specializes in blockchain development based on Bitcoin, EOS, Steem, Hive, and Ethereum blockchains. However, we will provide blockchain consulting and development for most all blockchains.</p>
                         </div>
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-12 col-md-4">
                       <div class="service-block"> 
                         <div class="service-info">
                           <!--<i class="service-icon fa fa-shopping-cart"></i>-->
@@ -403,34 +420,25 @@
                             <img src="images/service/web_design_icon.png" alt="Web Development" class="mCS_img_loaded">
                           </div>
                           <h4>Website Development</h4>
-                          <p>Looking to increase, or start, your business online web presence? Contact me if you need a landing site for your business, an website for managing internal business duties, or anything else. I will make sure we find a solution that works for you.</p>
+                          <p>
+                            If you need a website for marketing, ecommerce, displaying your portfolio, or pretty much anything else get in touch with <strong>Boone Development</strong> for very fast turn around, competetive rates, and high quality support.
+                          </p>
                         </div>
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-12 col-md-4">
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
                             <img src="images/service/code_icon.png" alt="Custom Development" class="mCS_img_loaded">
                           </div>
                           <h4>Custom Development</h4>
-                          <p>Need a custom script or application created specifically for your business or work force? Send me an email with the details of the project and we can get together to come up with a customized solution that will satisfy your needs.</p>
+                          <p>Need a custom app, database, API, smart contract, or entire blockchain created specifically for your business? Send me an email with the details of the project and we can get together to come up with a customized solution that will satisfy your needs.</p>
                         </div>
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-md-3">
-                      <div class="service-block"> 
-                        <div class="service-info">
-                          <div class="service-image">
-                            <img src="images/service/creativity_icon.png" alt="Cloud Monitoring" class="mCS_img_loaded">
-                          </div>
-                          <h4>Cloud Monitoring</h4>
-                          <p>You don't need a massive IT team to monitor the activity of your small business cloud infrastructure. Instead, get in touch with me and I can help implement 24/7 monitoring and logging of your systems with real-time notifications.</p>
-                        </div>
-                      </div>
-                    </div>
                   </div>
                   <!-- End of My Services -->
 
@@ -489,7 +497,7 @@
       <!-- /Main Content -->
     </div>
     <footer>
-      <div class="copyrights">© Boone Development 2019. All rights reserved.</div>
+      <div class="copyrights">© Boone Development 2019 - 2021. All rights reserved.</div>
     </footer>
 
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
